force-app/main/default/objects/Quote_Document_Column_Def__mdt/Quote_Document_Column_Def__mdt.object-meta.xml
<CustomObject>
    <description>One column within a table definition, with a sequence number. Same reasoning as Quote Document Grouping: Custom Metadata has no ordered list, so print order has to be carried by a child record rather than by a delimited field. A table definition with NO column records emits a default set - a label column plus one per measure in its measure set - so every existing definition keeps working with no authoring. Records are needed only when a table wants a subset, a different order, or a non-measure field.</description>
    <label>Quote Document Column Def</label>
    <pluralLabel>Quote Document Column Defs</pluralLabel>
</CustomObject>