force-app/main/default/objects/Quote_Document_Column_Def__mdt/fields/Aggregation_Denominator__c.field-meta.xml
<CustomField>
    <fullName>Aggregation_Denominator__c</fullName>
    <inlineHelpText>For RATIO: the Quote_Document_Row__c field underneath, e.g. Amount_List__c. A denominator that aggregates to zero produces a blank cell, not a zero and not an error - a table with no quantity has no blended price.</inlineHelpText>
    <label>Aggregation Denominator</label>
    <length>80</length>
    <type>Text</type>
</CustomField>