force-app/main/default/objects/Quote_Document_Column_Def__mdt/fields/Aggregation_Numerator__c.field-meta.xml
<CustomField>
    <fullName>Aggregation_Numerator__c</fullName>
    <inlineHelpText>For RATIO: the Quote_Document_Row__c field on top of the division, e.g. Amount_Discount__c. Must be a measure this table writes.</inlineHelpText>
    <label>Aggregation Numerator</label>
    <length>80</length>
    <type>Text</type>
</CustomField>