force-app/main/default/objects/Quote_Document_Column_Def__mdt/fields/Aggregation_Rule__c.field-meta.xml
<CustomField>
    <fullName>Aggregation_Rule__c</fullName>
    <inlineHelpText>How this column value is computed on subtotal and total rows. SUM (default, and blank means this) adds the contributing rows. RATIO divides one measure by another, recomputed at each level. MAX takes the largest contributing row. SUM_THEN_MAX sums within each group then takes the largest group - the rule for peak active licences. LAST takes the final contributing row in display order, for a running balance. NONE leaves aggregate rows blank.</inlineHelpText>
    <label>Aggregation Rule</label>
    <length>20</length>
    <type>Text</type>
</CustomField>