force-app/main/default/objects/Quote_Document_Column_Def__mdt/fields/Column_Code__c.field-meta.xml
<CustomField>
    <fullName>Column_Code__c</fullName>
    <inlineHelpText>Semantic key for this column - COL_LABEL, COL_LIST, COL_NET and so on. NEVER an English phrase: the printed heading is resolved from this code through the label dictionary, so the code must stay stable when the heading is reworded or translated. Must be unique within a table definition.</inlineHelpText>
    <label>Column Code</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>