force-app/main/default/objects/Quote_Document_Column_Def__mdt/fields/Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Type__c</fullName>
    <inlineHelpText>How a renderer must format this column, without inspecting the value or describing the schema itself. Validated at config load against the bound field's real DisplayType - a Currency field declared as Text is exactly how two adapters start formatting the same value differently.</inlineHelpText>
    <label>Data Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Currency</fullName><default>false</default><label>Currency</label></value>
            <value><fullName>Number</fullName><default>false</default><label>Number</label></value>
            <value><fullName>Text</fullName><default>false</default><label>Text</label></value>
            <value><fullName>Percent</fullName><default>false</default><label>Percent</label></value>
            <value><fullName>Date</fullName><default>false</default><label>Date</label></value>
            <value><fullName>DateTime</fullName><default>false</default><label>DateTime</label></value>
            <value><fullName>Boolean</fullName><default>false</default><label>Boolean</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>