force-app/main/default/objects/Quote_Document_Column_Def__mdt/fields/Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Order__c</fullName>
    <inlineHelpText>Left-to-right print order within the table. Use tens (10, 20, 30) so a column can be inserted later without renumbering. Must be unique within a table definition - two columns sharing an order would print in an arbitrary sequence.</inlineHelpText>
    <label>Display Order</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>