force-app/main/default/objects/Quote_Document_Column_Def__mdt/fields/Format_Role__c.field-meta.xml
<CustomField>
    <fullName>Format_Role__c</fullName><description>Business meaning used by every renderer, such as Product, Description, Unit Price, Line Total, Date, or Identifier.</description><fieldManageability>DeveloperControlled</fieldManageability><label>Format Role</label><length>80</length><type>Text</type>
</CustomField>