force-app/main/default/objects/Quote_Document_Column_Def__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Uncheck to stop this column being generated at all. Different from Is Displayed on the generated record, which still emits the column and marks it non-printing.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>