force-app/main/default/objects/Quote_Document_Column_Def__mdt/fields/Total_Rule__c.field-meta.xml
<CustomField>
    <fullName>Total_Rule__c</fullName><description>How this column participates in totals. Use None, Sum, Payable, or Informational.</description><fieldManageability>DeveloperControlled</fieldManageability><label>Total Rule</label><length>40</length><type>Text</type>
</CustomField>