force-app/main/default/objects/Quote_Document_Column_Def__mdt/fields/Value_Field__c.field-meta.xml
<CustomField>
    <fullName>Value_Field__c</fullName>
    <inlineHelpText>The Quote_Document_Row__c API name this column reads, e.g. Amount_Net__c or Product_Code__c. ANY readable field qualifies, including one your org added itself - that is how a subscriber prints their own data with no core change. Leave BLANK for the label column, which prints the row's Display Label. A measure belonging to a different measure set than the table fails with COLUMN_MEASURE_MISMATCH.</inlineHelpText>
    <label>Value Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>